--- a/css/style.css
+++ b/css/style.css
@@ -136,11 +136,7 @@ main {
 
 .name {
     margin-bottom: .5rem;
-    transition: color .2s;
-}
-
-.name:hover {
-    color: var(--color-hover);
+    cursor: pointer;
 }
 
 .career {
