--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 /* ----------- TYPOGRAPHY -------- */
 html {
     font-size: 62.5%;
+    font-family: "Roboto", Arial, Helvetica, sans-serif
 }
 
 body {
